# password-management.yaml
appId: com.duckduckgo.mobile.ios
tags:
    - iphone
    - release

---

# Set up 
- runFlow: 
    file: ../shared/setup.yaml

# Validate passcode requested when accessing passwords for the first time
- tapOn: "Browsing Menu"
- tapOn: "Settings"
- scrollUntilVisible:
    element: "Passwords & Autofill"
    direction: DOWN
- tapOn: "Passwords & Autofill"
- tapOn: "Passwords"

# Add an item
- tapOn: "Add 24"
- tapOn:
    id: "Field_PasswordName"
- inputText: "Netflix"
- pressKey: Enter

- tapOn:
    id: "Field_Username"
- inputText: "test2@example.com"
- pressKey: Enter

- tapOn:
    id: "Field_Password"
- inputText: "secure!password"
- pressKey: Enter

- tapOn:
    id: "Field_Address"
- inputText: "netflix.com"
- pressKey: Enter

- tapOn:
    id: "Field_Notes"
- inputText: "A subscription based streaming site."

- tapOn: "Save"
- tapOn: "Passwords"
- tapOn: "Passwords & Autofill"
- tapOn: "Settings"
- tapOn: "Done"

# Validate everything was saved
- tapOn: "Browsing Menu"
- tapOn: "Settings"
- scrollUntilVisible:
    element: "Passwords & Autofill"
    direction: DOWN
- tapOn: "Passwords & Autofill"
- tapOn: "Passwords"

- runFlow:
    file: ../shared/dismiss_application_lock.yaml

- assertVisible: "Passwords"
- assertVisible: "Netflix"
- assertVisible: "test2@example.com"

- tapOn: "test2@example.com"

- assertVisible: "Delete Password"
- assertVisible: "Netflix"
- assertVisible: "test2@example.com"
- assertVisible: "A subscription based streaming site."

- assertVisible: "•••••••••••••••"
- tapOn: "Show Password"
- assertVisible: "secure!password"
- tapOn: "Hide Password"
- assertVisible: "•••••••••••••••"

# Validate edit
- tapOn: "Edit"
- tapOn: 
    id: "Field_PasswordName"
- tapOn:
    id: "Field_PasswordName"
- tapOn: 'Select All'
- inputText: "Netflix Streaming"
- pressKey: Enter

- tapOn: 
    id: "Field_Username"
- tapOn:
    id: "Field_Username"
- tapOn: 'Select All'
- inputText: "test3@example.com"
- pressKey: Enter

- tapOn:
    id: "Field_Password"
- eraseText
- inputText: "secure?password"
- pressKey: Enter

- tapOn: 
    id: "Field_Address"
- tapOn:
    id: "Field_Address"
- tapOn: 'Select All'
- inputText: "netflix.com/login"
- pressKey: Enter

- tapOn:
    id: "Field_Notes"
- scroll
- eraseText
- tapOn:
    id: "Field_Notes"
- eraseText

- inputText: "A subscription site."

- tapOn: "Save"
- tapOn: "Passwords"

- assertVisible: "Passwords"
- assertVisible: "Netflix Streaming"
- assertVisible: "test3@example.com"

# Validate search
- tapOn: "Search passwords"
- inputText: "ZZZ"
- assertVisible: "No Results"
- assertNotVisible: "Netflix Streaming"
- pressKey: Backspace
- pressKey: Backspace
- pressKey: Backspace
- inputText: "Net"
- assertVisible: "N"
- assertVisible: "Netflix Streaming"
- tapOn: "close"

# Validate details were saved
- tapOn: "test3@example.com"

- assertVisible: "Delete Password"
- assertVisible: "Netflix Streaming"
- assertVisible: "test3@example.com"
- assertVisible: "A subscription site."

- assertVisible: "•••••••••••••••"
- tapOn: "Show Password"
- assertVisible: "secure?password"

# Validate delete
- tapOn: "Delete Password"
- assertVisible: "Are you sure you want to delete this password?"
- tapOn: "Delete Password"
- assertVisible: "Passwords"
- assertNotVisible: "Netflix"
