appId: com.duckduckgo.mobile.ios
---

- scrollUntilVisible:
    element: Passwords & Autofill
- tapOn: Passwords & Autofill
- tapOn: Credit Cards

- runFlow:
    file: ../shared/dismiss_application_lock.yaml

- scrollUntilVisible:
    element: Credit card
- assertVisible: Credit card
- tapOn: Credit card
- assertVisible: 5101 6737 0209 1308
- tapOn: Credit Cards

- scrollUntilVisible:
    element: Debit card
- assertVisible: Debit card
- tapOn: Debit card
- assertVisible: 4242 4242 4242 4242

- tapOn: Credit Cards
- tapOn: Passwords & Autofill
- tapOn: Settings
